// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dex reducer default 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 0,
}
`;

exports[`dex reducer order 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [
    Object {
      "currentSequence": 123,
      "userOrders": "fromList",
    },
    Object {
      "currentSequence": 456,
      "userOrders": "fromList",
    },
  ],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 111,
}
`;

exports[`dex reducer orderBookSnapshot 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 0,
}
`;

exports[`dex reducer orderBookSnapshot wrong pair 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 0,
}
`;

exports[`dex reducer orderBookSubscription off 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 0,
}
`;

exports[`dex reducer orderBookSubscription on 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 0,
}
`;

exports[`dex reducer orderBookUpdate 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 0,
}
`;

exports[`dex reducer orderBookUpdate 2`] = `Array []`;

exports[`dex reducer orderBookUpdate wrong pair 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 0,
}
`;

exports[`dex reducer orderHistory 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [
    Object {
      "currentSequence": 123,
      "userOrders": "fromList",
    },
    Object {
      "currentSequence": 456,
      "userOrders": "fromList",
    },
  ],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 111,
}
`;

exports[`dex reducer userSubscription off 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [
    Object {
      "currentSequence": 123,
      "userOrders": "fromList",
    },
    Object {
      "currentSequence": 456,
      "userOrders": "fromList",
    },
  ],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 0,
}
`;

exports[`dex reducer userSubscription off 2`] = `
Array [
  Array [
    111,
  ],
]
`;

exports[`dex reducer userSubscription on 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Array [],
  "tokenBalance": Object {
    "allowance": 0,
    "balance": 0,
  },
  "userSubscription": 111,
}
`;
